# supreme-umbrella

./: .env.dist  .flake8  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
supreme_umbrella/: auth.py  db.py  forms.py  main.py  models.py  repo.py  schema.sql
supreme_umbrella/names/: city.txt  female.txt  last.txt  male.txt
supreme_umbrella/templates/: base.html  form.html  main.html  profile.html
